fix vh issue on mobile for menu placement

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -12,6 +12,7 @@
 }
 .header.bottom {
     top: calc(100vh - 6rem);
+    top: calc((var(--vh, 1vh) * 100) - 6rem);
 }
 
 .aboutPage {
